--- a/WordpressRESTClient/AppClient/MainWindow.xaml
+++ b/WordpressRESTClient/AppClient/MainWindow.xaml
@@ -8,6 +8,41 @@
         Title="MainWindow" Height="750" Width="650">
     
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+
+
+        </Grid.ColumnDefinitions>
+
+        <Button Grid.Column="0" Name="CategoriesCaller" Content="Get All Categories" Click="CategoriesCaller_Click" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"></Button>
+
+        <Button Grid.Column="0" Name="PostsCaller" Content="Get All Posts" Click="PostsCaller_Click" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0 100 0 0"></Button>
+
+        <ListView Grid.Column="1" Name="ListCategories" Margin="10 10 0 0" VerticalAlignment="Top" Height="300">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <WrapPanel>
+                        <TextBlock Text="Id :"/>
+                        <TextBlock Text="{Binding id}" FontWeight="Bold"/>
+                        <TextBlock Text="  Name :"/>
+                        <TextBlock Text="{Binding name}" FontWeight="Bold"/>
+                    </WrapPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <ListView Grid.Column="1" Name="ListPosts" Margin="10 10 0 0" VerticalAlignment="Bottom" Height="300">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <WrapPanel>
+                        <TextBlock Text="Id :"/>
+                        <TextBlock Text="{Binding id}" FontWeight="Bold"/>
+                        <TextBlock Text="  Name :"/>
+                        <TextBlock Text="{Binding name}" FontWeight="Bold"/>
+                    </WrapPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Window>
