--- a/WordpressRESTClient/AppClient/MainWindow.xaml
+++ b/WordpressRESTClient/AppClient/MainWindow.xaml
@@ -35,7 +35,7 @@
 
 
         </StackPanel>
-        <ListView Grid.Column="1" Name="ListCategories" Margin="10 10 0 0" VerticalAlignment="Top" Height="300">
+        <ListView Grid.Column="1" Name="ListCategories" Margin="10 10 0 0" VerticalAlignment="Top" Height="150">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
@@ -49,7 +49,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <ListView Grid.Column="1" Name="ListPosts" Margin="10 10 0 0" VerticalAlignment="Bottom" Height="350">
+        <ListView Grid.Column="1" Name="ListPosts" Margin="10 10 0 0" VerticalAlignment="Bottom" Height="550">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
@@ -59,6 +59,7 @@
                         <TextBlock Text="{Binding Path=title.rendered}" FontWeight="Bold"/>
                         <TextBlock Text="Featured Media Id :"/>
                         <TextBlock Text="{Binding featured_media}" FontWeight="Bold"/>
+                        <Image Name="FeaturedImageinList" Source="{Binding imagePath}" Height="300" Width="300" Margin="10 0 10 0"></Image>
                         <Rectangle Stroke="Red"></Rectangle>
                     </StackPanel>
                 </DataTemplate>
@@ -66,7 +67,7 @@
         </ListView>
 
         <StackPanel Grid.Column="2">
-                <TextBlock Name="textFeaturedMedia" Text="FeaturedMediaURL : "></TextBlock>
+               <TextBlock Name="textFeaturedMedia" Text="FeaturedMediaURL : "></TextBlock>
             <Image Name="FeaturedImage" Height="300" Width="300" Margin="0 50 0 0"></Image>
         </StackPanel>
         
